<resources>
    <string name="app_name">Diplom</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="create_acc">Create account</string>
    <string name="create_account">Create Account</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="not_inputed">Nothing inputted in this field</string>
    <string name="incorrect_email">Incorrect email address provided</string>
    <string name="password_error_length">Your password length is less then 6</string>
    <string name="not_choosed_national">National Team is not chosen</string>
    <string name="not_choosed_club">Club is not chose</string>
    <string name="user_registred">User is registered</string>
    <string name="unsucsessful">Registering failed</string>
    <string name="unsucsessful_login">Login failed, please check your credentials</string>
    <string name="news">News</string>
    <string name="games">Games</string>
    <string name="tables">Tables</string>
    <string name="profile">Profile</string>
    <string name="welcome">Welcome</string>
    <string name="sign_out">Sign out ?</string>
    <string name="form">Form: </string>
    <string name="age">"Age: "</string>
    <string name="position">"Position: "</string>
    <string name="goalkeeper">Goalkeeper</string>
    <string name="defender">Defender</string>
    <string name="midfielder">Midfielder</string>
    <string name="attacker">Attacker</string>
    <string name="club">Club</string>
    <string name="team_players">Team Players</string>
    <string name="recent_games">Recent Games</string>
    <string name="player_age">Age:</string>
    <string name="player_nationality">Nationality:</string>
    <string name="player_height">Height:</string>
    <string name="player_weight">Weight:</string>
    <string name="saves">"Conceded/Saves: "</string>
    <string name="penalties_saved">Penalties Saved:</string>
    <string name="overview">Overview</string>
    <string name="statistic">Statistic</string>
    <string name="squads">Squads</string>
    <string name="varcheck">VAR</string>
    <string name="start_squad">Start Squad</string>
    <string name="substitution">Substitution</string>
    <string name="coaches">Coaches</string>
    <string name="change">Change</string>
    <string name="change_club_team">Are you sure you want change favourite club team?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="table">Table</string>
    <string name="scorers">Scorers</string>
    <string name="home">Home</string>
    <string name="away">Away</string>
    <string name="calendar">Next</string>
    <string name="results">Results</string>
    <string name="team_name">"Team "</string>
    <string name="GP">GP</string>
    <string name="W">W</string>
    <string name="D">D</string>
    <string name="L">L</string>
    <string name="GD">GD</string>
    <string name="P">P</string>
    <string name="player_name">Name</string>
    <string name="goals">Goals</string>
    <string name="assists">Assists</string>
    <string name="no_table">There is no standings for this tournament</string>
    <string name="no_results_league">No results in this league</string>
    <string name="no_next_matches">No next matches in this tournament</string>
    <string name="choose_date">Choose Date</string>
    <string name="today_date">"Choosen date: "</string>
    <string name="Имя">Name</string>
    <string-array name="season">
        <item>2021</item>
        <item>2020</item>
        <item>2019</item>
        <item>2018</item>
        <item>2017</item>
    </string-array>
    <string-array name="league_cup">
        <item>League</item>
        <item>Cup</item>
    </string-array>
    <string-array name="word_cup">
        <item>2018</item>
        <item>2014</item>
        <item>2010</item>
    </string-array>
    <string-array name="euro">
        <item>2020</item>
        <item>2016</item>
        <item>2012</item>
        <item>2008</item>
    </string-array>
    <string-array name="america">
        <item>2021</item>
        <item>2019</item>
        <item>2016</item>
        <item>2015</item>
    </string-array>
    <string-array name="africa">
        <item>2021</item>
        <item>2019</item>
        <item>2017</item>
        <item>2015</item>
    </string-array>
</resources>