<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".loggin.LoginActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="227dp"
        android:layout_height="197dp"
        android:layout_centerHorizontal="true"

        android:layout_marginTop="50dp"
        android:src="@drawable/check" />

    <EditText
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_alignBottom="@id/imageView2"
        android:layout_centerInParent="true"
        android:layout_marginBottom="-123dp"
        android:background="@drawable/login_email"

        android:drawableStart="@drawable/ic_login_email"
        android:drawablePadding="5dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textPersonName"
        android:paddingStart="10dp"
        android:textColor="#D8D1D1" />

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_alignBottom="@id/email"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="-58dp"
        android:background="@drawable/login_email"
        android:drawableStart="@drawable/ic_login_password"
        android:drawablePadding="5dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="10dp"

        android:textColor="#D8D1D1" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/loginBtn"
        android:layout_width="273dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/password"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="-76dp"
        android:background="@drawable/login_button"
        android:text="@string/login"
        android:textColor="#3E3D3D" />

    <TextView
        android:id="@+id/sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/loginBtn"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="-30dp"
        android:text="@string/create_acc"
        android:textColor="#3E3D3D"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/sign_up"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="-125dp"
        android:src="@drawable/ball" />

    <ProgressBar
        android:id="@+id/loginProgressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_alignBottom="@id/password"
        android:layout_centerHorizontal="true"
        android:visibility="gone"
        android:layout_height="wrap_content" />

</RelativeLayout>