<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context=".table.competionReview.StandingActivity"
    android:layout_width="match_parent"
    android:weightSum="1"
    android:orientation="vertical"
    android:layout_height="match_parent">




    <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_weight="0.2"
    android:layout_height="0dp">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/county_photo"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize50Percent" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/league_photo"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="14dp"
            app:layout_constraintBottom_toTopOf="@+id/divider7"
            app:layout_constraintStart_toStartOf="parent"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize50Percent" />

        <View
            android:id="@+id/divider7"
            android:layout_width="409dp"
            android:layout_height="10dp"
            android:layout_marginEnd="1dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/league_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="22dp"
            android:layout_marginTop="35dp"
            android:text="TextView"
            app:layout_constraintStart_toEndOf="@+id/league_photo"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/spinner_season"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginStart="22dp"
            android:layout_marginTop="7dp"
            app:layout_constraintStart_toEndOf="@+id/league_photo"
            app:layout_constraintTop_toBottomOf="@+id/league_name" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/league_cup"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:visibility="gone"
            android:layout_marginStart="22dp"
            android:layout_marginTop="12dp"
            app:layout_constraintStart_toEndOf="@+id/league_photo"
            app:layout_constraintTop_toBottomOf="@+id/spinner_season" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.05"
        android:orientation="horizontal">
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/table"
            android:layout_width="0dp"
            android:layout_height="27dp"
            android:textSize="13sp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="3dp"
            android:layout_weight="0.159"
            android:background="@drawable/custom_button_game"
            android:text="@string/table"
            android:textColor="#535353" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/scorers"
            android:layout_width="0dp"
            android:layout_height="27dp"
            android:textSize="13sp"


            android:layout_marginTop="4dp"

            android:layout_marginBottom="3dp"
            android:layout_weight="0.159"

            android:background="@drawable/custom_button_game"
            android:text="@string/scorers"
            android:textColor="#535353" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/home"
            android:layout_width="0dp"
            android:layout_height="27dp"
            android:textSize="13sp"
            android:visibility="gone"
            android:layout_marginTop="4dp"

            android:layout_marginBottom="3dp"
            android:layout_weight="0.159"
            android:background="@drawable/custom_button_game"
            android:text="@string/home"

            android:textColor="#535353" />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/away"
            android:layout_width="0dp"
            android:layout_height="27dp"
            android:textSize="13sp"
            android:visibility="gone"
            android:layout_marginTop="4dp"

            android:layout_marginBottom="3dp"
            android:layout_weight="0.159"

            android:background="@drawable/custom_button_game"
            android:text="@string/away"
            android:textColor="#535353" />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/calendar"
            android:layout_width="0dp"
            android:layout_height="27dp"
            android:textSize="13sp"

            android:layout_marginTop="4dp"

            android:layout_marginBottom="3dp"
            android:layout_weight="0.159"

            android:background="@drawable/custom_button_game"
            android:text="@string/calendar"
            android:textColor="#535353" />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/results"
            android:layout_width="0dp"
            android:layout_height="27dp"
            android:textSize="13sp"

            android:layout_marginTop="4dp"

            android:layout_marginBottom="3dp"
            android:layout_weight="0.159"

            android:background="@drawable/custom_button_game"
            android:text="@string/results"
            android:textColor="#535353" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/table_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.75"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp" />
</LinearLayout>