<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".gameInfo.SquadFragment">

    <LinearLayout
        android:weightSum="1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:textAlignment="center"
            android:layout_weight="0.03"
            android:layout_height="0dp"
            android:text="@string/start_squad" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:weightSum="1"
            android:layout_weight="0.594">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/start_squad_home"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_height="match_parent"
                 />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/start_squad_away"
                android:layout_weight="0.5"
                android:layout_width="0dp"
                android:layout_height="match_parent" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_weight="0.03"
            android:layout_height="0dp"
            android:textAlignment="center"
            android:text="@string/substitution" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.25"
            android:weightSum="1">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/sub_squad_home"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/sub_squad_away"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5" />
        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.095">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/coaches"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/coach_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="11dp"
                android:layout_marginBottom="16dp"
                android:text="TextView"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />

            <TextView
                android:id="@+id/coach_away"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="11dp"
                android:layout_marginEnd="19dp"
                android:layout_marginBottom="16dp"
                android:text="TextView"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />

            <View
                android:id="@+id/divider6"
                android:layout_width="1dp"
                android:layout_height="43dp"
                android:background="?android:attr/listDivider"
                tools:layout_editor_absoluteX="205dp"
                tools:layout_editor_absoluteY="24dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</FrameLayout>